--- a/src/css/components/_pagination.scss
+++ b/src/css/components/_pagination.scss
@@ -21,7 +21,9 @@
 }
 
 
-// Pagination Group
+
+// PAGINATION GROUP
+// =====================================
 
 .c-pagination__group {
   display: flex;
@@ -45,7 +47,9 @@
 }
 
 
-// Pagination Page
+
+// PAGINATION PAGE
+// =====================================
 
 .c-pagination__page {
   margin-right: 0.5rem;
@@ -53,7 +57,9 @@
 }
 
 
-// Pagination Items per Page
+
+// PAGINATION ITEMS per PAGE
+// =====================================
 
 .c-pagination__label {
   margin: 0.5rem 0;
