--- a/src/html/partials/includes/nav-sidebar.hbs
+++ b/src/html/partials/includes/nav-sidebar.hbs
@@ -22,4 +22,6 @@
       <a href="#" class="c-nav-sidebar__link">Forwards</a>
     </li>
   </ul>
+
+  <div class="c-nav-sidebar__cover  js-sidebar-cover"></div>
 </nav>
