Add animation for fly-out sidebar navigation

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -69,6 +69,7 @@ $break-xxl-min:  $break-xxl;                 // 1888px;
 // Z-INDEXES
 // =====================================
 
+$z-index-nav-cover:    700;
 $z-index-nav-sidebar:  800;
 $z-index-dropdown:     900;
 $z-index-header:       1000;
