--- a/src/html/pages/settings.hbs
+++ b/src/html/pages/settings.hbs
@@ -12,6 +12,7 @@ title: Settings
 
     <div class="l-container__content">
 
+      <div class="c-nav-sidebar-cover  js-sidebar-cover"></div>
       <aside class="l-container__sidebar  js-sidebar">
         {{> includes/nav-sidebar}}
       </aside>
