--- a/src/css/components/_nav-sidebar.scss
+++ b/src/css/components/_nav-sidebar.scss
@@ -8,16 +8,34 @@
   height: 100%;
 }
 
-.c-nav-sidebar__cover {
+.c-nav-sidebar-cover {
   position: absolute;
-  top: 0;
+  visibility: hidden;
+  top: 3.7rem; // Magic number vor header height
   bottom: 0;
   left: 0;
   right: 0;
+  opacity: 0;
 
-  z-index: 1;
+  z-index: $z-index-nav-cover;
 
   background-color: rgba(0, 0, 0, 0.8);
+
+  transition: visibility 0.2s, opacity 0.2s;
+  will-change: opacity;
+
+  &.is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  @media (min-width: $break-sm-min) {
+    top: 4.5rem; // Magic number vor header height
+  }
+
+  @media (min-width: $break-md-min) {
+    top: 4rem; // Magic number vor header height
+  }
 
   @media (min-width: $break-lg-min) {
     display: none;
@@ -31,29 +49,19 @@
 
 .c-nav-sidebar__list {
   position: relative;
-  width: 75%;
   height: 100%;
   margin: 0;
   padding: 0;
-
-  z-index: 2;
 
   overflow-y: auto;
 
   background-color: $color-mist;
 
-  @media (min-width: $break-sm-min) {
-    width: 60%;
-  }
-
   @media (min-width: $break-md-min) {
-    display: inline-block;
-    width: auto;
     padding-bottom: 2em;
   }
 
   @media (min-width: $break-lg-min) {
-    display: block;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
