--- a/src/html/components/box.hbs
+++ b/src/html/components/box.hbs
@@ -6,21 +6,21 @@ description: Three letters for a very versatile thingy.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Text"}}
+  {{#embed "styleguide/article" title="Text"}}
   {{#content "body"}}
     {{> includes/box-text}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Login"}}
+  {{#embed "styleguide/article" title="Login"}}
   {{#content "body"}}
     {{> includes/box-login}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Form"}}
+  {{#embed "styleguide/article" title="Form"}}
   {{#content "body"}}
     {{> includes/box-form}}
   {{/content}}
