--- a/src/html/components/buttons.hbs
+++ b/src/html/components/buttons.hbs
@@ -6,7 +6,7 @@ description: Buttons. You click on them. They do stuff.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Default w/ Label"}}
+  {{#embed "styleguide/article" title="Default w/ Label"}}
   {{#content "body"}}
     <button class="c-button">Button</button>
     <input type="button" class="c-button" value="Input (Button)">
@@ -16,7 +16,7 @@ description: Buttons. You click on them. They do stuff.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Default w/ Icon and Label"}}
+  {{#embed "styleguide/article" title="Default w/ Icon and Label"}}
   {{#content "body"}}
     <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
@@ -39,7 +39,7 @@ description: Buttons. You click on them. They do stuff.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Default w/ Icon and w/o Label"}}
+  {{#embed "styleguide/article" title="Default w/ Icon and w/o Label"}}
   {{#content "body"}}
     <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
@@ -62,7 +62,7 @@ description: Buttons. You click on them. They do stuff.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Highlighted"}}
+  {{#embed "styleguide/article" title="Highlighted"}}
   {{#content "body"}}
     <button class="c-button c-button--highlight">Button</button>
     <input type="button" class="c-button c-button--highlight" value="Input (Button)">
@@ -72,7 +72,7 @@ description: Buttons. You click on them. They do stuff.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Highlighted w/ Icon and Label"}}
+  {{#embed "styleguide/article" title="Highlighted w/ Icon and Label"}}
   {{#content "body"}}
     <button class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
@@ -95,7 +95,7 @@ description: Buttons. You click on them. They do stuff.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Highlighted w/ Icon and w/o Label"}}
+  {{#embed "styleguide/article" title="Highlighted w/ Icon and w/o Label"}}
   {{#content "body"}}
     <button class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
@@ -118,7 +118,7 @@ description: Buttons. You click on them. They do stuff.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Icon only w/o Background"}}
+  {{#embed "styleguide/article" title="Icon only w/o Background"}}
   {{#content "body"}}
     <button class="c-icon-button">
       <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
