--- a/src/html/components/dropdown.hbs
+++ b/src/html/components/dropdown.hbs
@@ -6,28 +6,28 @@ description: Click a button and an awesome menu pops up.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Text"}}
+  {{#embed "styleguide/article" title="Text"}}
   {{#content "body"}}
     {{> includes/dropdown-text}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Icon"}}
+  {{#embed "styleguide/article" title="Icon"}}
   {{#content "body"}}
     {{> includes/dropdown-icon}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Icon and Text"}}
+  {{#embed "styleguide/article" title="Icon and Text"}}
   {{#content "body"}}
     {{> includes/dropdown-icon-and-text}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Form Autocomplete"}}
+  {{#embed "styleguide/article" title="Form Autocomplete"}}
   {{#content "body"}}
     {{> includes/dropdown-form}}
   {{/content}}
