--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -6,7 +6,7 @@ description: Users input things. The server gets things.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Text Inputs" body-class="light"}}
+  {{#embed "styleguide/article" title="Text Inputs" body-class="light"}}
   {{#content "body"}}
     <label for="text">Text input</label>
     <input type="text" id="text" placeholder="Text">
@@ -46,7 +46,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Text Inputs (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Text Inputs (dark)" body-class="dark"}}
   {{#content "body"}}
     <label for="text" class="c-label--dark">Text input</label>
     <input type="text" id="text" placeholder="Text" class="c-input--dark">
@@ -82,7 +82,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Textarea" body-class="light"}}
+  {{#embed "styleguide/article" title="Textarea" body-class="light"}}
   {{#content "body"}}
     <label for="textarea">Textarea</label>
     <textarea id="textarea" placeholder="Textarea" rows="5"></textarea>
@@ -103,7 +103,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Textarea (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Textarea (dark)" body-class="dark"}}
   {{#content "body"}}
     <label for="textarea" class="c-label--dark">Textarea</label>
     <textarea id="textarea" placeholder="Textarea" rows="5" class="c-input--dark"></textarea>
@@ -124,7 +124,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Select" body-class="light"}}
+  {{#embed "styleguide/article" title="Select" body-class="light"}}
   {{#content "body"}}
     <label for="select-1" class="u-sr-only">Select input</label>
     <select id="select-1">
@@ -153,7 +153,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Select (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Select (dark)" body-class="dark"}}
   {{#content "body"}}
     <label for="select-4" class="u-sr-only">Select input</label>
     <select id="select-4" class="c-input--dark">
@@ -182,7 +182,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Radio"}}
+  {{#embed "styleguide/article" title="Radio"}}
   {{#content "body"}}
     <input type="radio" name="radio-1" value="radio-1-1" id="radio-1-1" checked>
     <label for="radio-1-1">Radio</label>
@@ -205,7 +205,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Checkbox"}}
+  {{#embed "styleguide/article" title="Checkbox"}}
   {{#content "body"}}
     <input type="checkbox" name="checkbox-1" value="checkbox-1-1" id="checkbox-1-1" checked>
     <label for="checkbox-1-1">Checkbox (checked)</label>
@@ -228,7 +228,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Radio (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Radio (dark)" body-class="dark"}}
   {{#content "body"}}
     <input type="radio" name="radio-2" value="radio-1" id="radio-2-1" class="c-input--dark" checked>
     <label for="radio-2-1">Radio</label>
@@ -251,7 +251,7 @@ description: Users input things. The server gets things.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Checkbox (dark)" body-class="dark"}}
+  {{#embed "styleguide/article" title="Checkbox (dark)" body-class="dark"}}
   {{#content "body"}}
     <input type="checkbox" name="checkbox-2" value="checkbox-2-1" id="checkbox-2-1" class="c-input--dark" checked>
     <label for="checkbox-2-1">Checkbox (checked)</label>
