--- a/src/html/components/header.hbs
+++ b/src/html/components/header.hbs
@@ -6,21 +6,21 @@ description: The Beginning of Everything.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Default"}}
+  {{#embed "styleguide/article" title="Default"}}
   {{#content "body"}}
     {{> includes/header-default}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Notification (success)"}}
+  {{#embed "styleguide/article" title="Notification (success)"}}
   {{#content "body"}}
     {{> includes/header-notification-success}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Notification (error)"}}
+  {{#embed "styleguide/article" title="Notification (error)"}}
   {{#content "body"}}
     {{> includes/header-notification-error}}
   {{/content}}
