--- a/src/html/components/logo.hbs
+++ b/src/html/components/logo.hbs
@@ -7,21 +7,21 @@ description: The one and the only.
 {{#content "body"}}
 
 
-  {{#embed "layouts/article" title="Standalone" description="Dark logo for light backgrounds."}}
+  {{#embed "styleguide/article" title="Standalone" description="Dark logo for light backgrounds."}}
   {{#content "body"}}
     {{> includes/logo-standalone}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Header" description="Light logo for the dark header." body-class="dark"}}
+  {{#embed "styleguide/article" title="Header" description="Light logo for the dark header." body-class="dark"}}
   {{#content "body"}}
     {{> includes/logo-header}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Kapp-Hamburg" description="The very special branding logo with a hover twist." body-class="dark"}}
+  {{#embed "styleguide/article" title="Kapp-Hamburg" description="The very special branding logo with a hover twist." body-class="dark"}}
   {{#content "body"}}
     {{> includes/logo-kapp-hamburg}}
   {{/content}}
