--- a/src/html/components/nav-horizontal.hbs
+++ b/src/html/components/nav-horizontal.hbs
@@ -7,14 +7,14 @@ description: Contains filter or actions or a title.
 {{#content "body"}}
 
 
-  {{#embed "layouts/article" title="Filter"}}
+  {{#embed "styleguide/article" title="Filter"}}
   {{#content "body"}}
     {{> includes/nav-horizontal-filter}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Title"}}
+  {{#embed "styleguide/article" title="Title"}}
   {{#content "body"}}
     {{> includes/nav-horizontal-title}}
   {{/content}}
