--- a/src/html/components/nav-sidebar.hbs
+++ b/src/html/components/nav-sidebar.hbs
@@ -7,7 +7,7 @@ description: Context-sensitive links for additional actions.
 {{#content "body"}}
 
 
-  {{#embed "layouts/article"}}
+  {{#embed "styleguide/article"}}
   {{#content "body"}}
     {{> includes/nav-sidebar}}
   {{/content}}
