--- a/src/html/components/notification.hbs
+++ b/src/html/components/notification.hbs
@@ -7,14 +7,14 @@ description: Fire alarm, severe weather and flood warning.
 {{#content "body"}}
 
 
-  {{#embed "layouts/article" title="Success"}}
+  {{#embed "styleguide/article" title="Success"}}
   {{#content "body"}}
     {{> includes/notification-success}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Error"}}
+  {{#embed "styleguide/article" title="Error"}}
   {{#content "body"}}
     {{> includes/notification-error}}
   {{/content}}
