--- a/src/html/components/pagination.hbs
+++ b/src/html/components/pagination.hbs
@@ -7,7 +7,7 @@ description: If you gained so much fame, you need multiple pages for all your do
 {{#content "body"}}
 
 
-  {{#embed "layouts/article"}}
+  {{#embed "styleguide/article"}}
   {{#content "body"}}
     {{> includes/pagination}}
   {{/content}}
