--- a/src/html/components/footer.hbs
+++ b/src/html/components/footer.hbs
@@ -6,14 +6,14 @@ description: That thing at the end of all pages.
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
-  {{#embed "layouts/article" title="Login"}}
+  {{#embed "styleguide/article" title="Login"}}
   {{#content "body"}}
     {{> includes/footer-login}}
   {{/content}}
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Logged in"}}
+  {{#embed "styleguide/article" title="Logged in"}}
   {{#content "body"}}
     {{> includes/footer-logged-in}}
   {{/content}}
